--- a/css/tab.css
+++ b/css/tab.css
@@ -178,8 +178,13 @@
 
 /* form sections -------------------------------------------------------------- */
 
-.form-wa-email {
+.form-email {
   width: 40%;
+  height: 40%;
+}
+
+.button-email {
+  padding: 0.7rem 13rem;
 }
 
 /* wa sections -------------------------------------------------------------- */
